# Hybrid-AutoML-Orchestrator

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: automl_config.yaml  deployment_policy.yaml  mcp_policy.yaml  training_budget.yaml
docs/: architecture.md  decision_flow.md  interview_explanation.md  mcp_design.md
pipelines/: daily_check.py  emergency_rollback.py  scheduled_retrain.py
scripts/: init_h2o.py  list_models.py  seed_data.py  simulate_drift.py  verify_llm.py
src/: main.py
src/automl/: __init__.py  experiment_tracker.py  h2o_client.py  model_evaluator.py
src/deployment/: __init__.py  inference_service.py  model_loader.py  rollback.py
src/mcp/: __init__.py  decision_engine.py  policy_engine.py  policy_validator.py  rules.py
src/monitoring/: __init__.py  data_drift.py  performance_monitor.py  schema_check.py
src/orchestrator/: __init__.py  automl_runner.py  comparison_engine.py  promotion_manager.py  retraining_trigger.py
src/registry/: __init__.py  metadata_store.py  model_registry.py  versioning.py
src/utils/: config_loader.py  logger.py  metrics.py
tests/: test_drift_detection.py  test_model_comparison.py  test_policy_engine.py  test_registry.py
